Removed static analysis as a step